--- a/content/post/xgboost by hand.Rmd
+++ b/content/post/xgboost by hand.Rmd
@@ -4,15 +4,18 @@ author: "Xinyu Zhang"
 date: "March 18, 2019"
 output:
   html_document:
-    keep_md: true
-    df_print: paged
+    toc: true
+    number_sections: true
+    toc_float: true
 ---
 
-
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
 In this post, I will explain xgoost algorithm and manually solve a simple binary classification problem using the algorithm.
 
-## Xgboost Algorithm for binary classification
+# Xgboost Algorithm for binary classification
 
 In generalized linear regression (GLM), we have $g(E[Y])=X\beta$ where the right hand side is the linear combination of predictors. In xgboost, it puts predictors into multiple trees (rounds) to come up with leaf score (weight) $w_{ki}$ for each tree $k$ and observation $i$. $w_{ki}$ is summed over all trees so that $w_{\cdot{i}}$ is the final leaf score for observation $i$. The vector $W$ formed by these $W_i=w_{\cdot{i}}$ is what appears on the right hand side of $g(E[Y])=X\beta$ instead of $X\beta$. In GLM, the common link function for a response variable following a bernoulli distribution is the logit canonical link. Xgboost also uses the logit link when specifying the "binary:logistic" objective. In GLM, we maximize the log likelihood of the estimator $\widehat{\beta}$ to find the desired $\widehat{\beta}$. In xgboost, the log likelihood of $\widehat{W}$ is maximized which is equivalent to minimizing the loss function $LOSS(\widehat{W})=-l(\widehat{W})$.
 
@@ -102,13 +105,24 @@ $$
 
 Split is allowed only when we have a positive gain.
 
-## Match xgboost result with manual calculation
+# Match xgboost result with manual calculation
 
 The data set I used is the agaricus data set in xgboost library. To make everything simpler, I only used the first 2000 observations with the response variable = 1 and the first 3000 observations with the response variable = 0. Also, only the first three predictors (cap-shape=bell, cap-shape=conical and cap-shape=convex) are used in the model.
 
+```{r echo=FALSE, message=FALSE}
+library(xgboost)
+data(agaricus.train, package='xgboost')
+data(agaricus.test, package='xgboost')
 
-```
-## [1] "cap-shape=bell"    "cap-shape=conical" "cap-shape=convex"
+train_ind=c(which(agaricus.train$label=="1")[1:2000],which(agaricus.train$label=="0")[1:3000])
+train_X = agaricus.train$data[train_ind,1:3]
+train_y = agaricus.train$label[train_ind]
+train_data = xgb.DMatrix(train_X, label = train_y, missing = NA)
+train_X@Dimnames[[2]]
+
+test_X = agaricus.test$data[1:10,1:3]
+test_y = agaricus.test$label[1:10]
+xgb.test.data = xgb.DMatrix(test_X, label = test_y, missing = NA)
 ```
 
 The following parameters are used:
@@ -135,8 +149,23 @@ eval_metric = "error". Misclassification rate is used for evaluation.
 
 verbose = 0. It tells xgboost not to print "error" after finishing each tree.
 
-<!--html_preserve--><div id="htmlwidget-c943df3d871b94fdd1bd" style="width:672px;height:480px;" class="grViz html-widget"></div>
-<script type="application/json" data-for="htmlwidget-c943df3d871b94fdd1bd">{"x":{"diagram":"digraph {\n\ngraph [layout = \"dot\",\n       rankdir = \"LR\"]\n\nnode [color = \"DimGray\",\n      style = \"filled\",\n      fontname = \"Helvetica\"]\n\nedge [color = \"DimGray\",\n     arrowsize = \"1.5\",\n     arrowhead = \"vee\",\n     fontname = \"Helvetica\"]\n\n  \"1\" [label = \"Tree 1\ncap-shape=bell\nCover: 1189.18127\nGain: 4.80300188\", shape = \"rectangle\", fontcolor = \"black\", fillcolor = \"Beige\"] \n  \"2\" [label = \"cap-shape=convex\nCover: 1147.43542\nGain: 0.0110983625\", shape = \"rectangle\", fontcolor = \"black\", fillcolor = \"Beige\"] \n  \"3\" [label = \"Leaf\nCover: 41.745903\nValue: -0.346059561\", shape = \"oval\", fontcolor = \"black\", fillcolor = \"Khaki\"] \n  \"4\" [label = \"Leaf\nCover: 524.148438\nValue: -0.00805134326\", shape = \"oval\", fontcolor = \"black\", fillcolor = \"Khaki\"] \n  \"5\" [label = \"Leaf\nCover: 623.286987\nValue: -0.00180733623\", shape = \"oval\", fontcolor = \"black\", fillcolor = \"Khaki\"] \n  \"6\" [label = \"Tree 0\ncap-shape=bell\nCover: 1250\nGain: 75.0913696\", shape = \"rectangle\", fontcolor = \"black\", fillcolor = \"Beige\"] \n  \"7\" [label = \"cap-shape=convex\nCover: 1183.25\nGain: 9.77643013\", shape = \"rectangle\", fontcolor = \"black\", fillcolor = \"Beige\"] \n  \"8\" [label = \"Leaf\nCover: 66.75\nValue: -1.4243542\", shape = \"oval\", fontcolor = \"black\", fillcolor = \"Khaki\"] \n  \"9\" [label = \"Leaf\nCover: 549.75\nValue: -0.438492954\", shape = \"oval\", fontcolor = \"black\", fillcolor = \"Khaki\"] \n  \"10\" [label = \"Leaf\nCover: 633.5\nValue: -0.255319148\", shape = \"oval\", fontcolor = \"black\", fillcolor = \"Khaki\"] \n\"1\"->\"2\" [label = \"< -9.53674316e-07\", style = \"bold\"] \n\"2\"->\"4\" [label = \"< -9.53674316e-07\", style = \"bold\"] \n\"6\"->\"7\" [label = \"< -9.53674316e-07\", style = \"bold\"] \n\"7\"->\"9\" [label = \"< -9.53674316e-07\", style = \"bold\"] \n\"1\"->\"3\" [style = \"bold\", style = \"solid\"] \n\"2\"->\"5\" [style = \"solid\", style = \"solid\"] \n\"6\"->\"8\" [style = \"solid\", style = \"solid\"] \n\"7\"->\"10\" [style = \"solid\", style = \"solid\"] \n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script><!--/html_preserve-->
+```{r echo=FALSE, message=FALSE}
+bst = xgboost(data = train_data,
+              eta = 1,
+              gamma = 0,
+              max.depth = 3,
+              min_child_weight = 1,
+              max_delta_step = 0,
+              lambda = 1,
+              nround = 2,
+              objective = "binary:logistic",
+              base_score = 0.5,
+              eval_metric = "error",
+              verbose = 0)
+
+#xgb.model.dt.tree(train_X@Dimnames[[2]], model = bst)
+xgb.plot.tree(model=bst)
+```
 
 The Gain is same as our Gain formula but without $\frac{1}{2}$.
 
@@ -146,8 +175,7 @@ The Value is the leaf score in that leaf.
 
 Now let's manually perform the xgboost. We first initiate the estimated success probability as 0.5. It will only be updated when a tree is finished not at each node in the tree. Then we calculate and report the Gain, node Cover, child node Cover, leaf score and leaf success probability if a split is allowed. Since all of our predictors are binary, I will assign the predictor = 0 as the left child node and the predictor = 1 as the right child node.
 
-
-```r
+```{r}
 p = rep(0.5,nrow(train_X))
 
 L = which(train_X[,'cap-shape=bell']==0)
@@ -194,47 +222,243 @@ cat('"cap-shape=bell" is used to make the split. The gain is ',
     sep = "")
 ```
 
-```
-## "cap-shape=bell" is used to make the split. The gain is 75.09137. The node cover is 1250. The left child node cover is 1183.25. The right child node cover is 66.75. The left leaf score is -0.340722. The right leaf score is -1.424354. The left leaf success probability is 0.4156341. The right leaf success probability is 0.1939799.
-```
-
 Let's check out the report of other possible splits.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=conical']==0)
+R = which(train_X[,'cap-shape=conical']==1)
 
-```
-## "cap-shape=conical" is used to make the split. The gain is 1.547051. The node cover is 1250. The left child node cover is 1249.5. The right child node cover is 0.5. The left leaf score is -0.4006397. The right leaf score is 0.6666667. The left leaf success probability is 0.4011586. The right leaf success probability is 0.6607564.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=conical" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since the right child node cover is smaller than the min_child_weight = 1, the split is not allowed.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=convex']==0)
+R = which(train_X[,'cap-shape=convex']==1)
 
-```
-## "cap-shape=convex" is used to make the split. The gain is 26.5321. The node cover is 1250. The left child node cover is 616.5. The right child node cover is 633.5. The left leaf score is -0.5473684. The right leaf score is -0.2553191. The left leaf success probability is 0.3664752. The right leaf success probability is 0.4365147.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=convex" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since "cap-shape=bell" gives the largest gain among all the allowed splits. We will use it to make the initial split of our tree.
 
 Let's see the report for all possible splits for "cap-shape=bell" = 0.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=conical']==0)
+R = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=conical']==1)
 
-```
-## "cap-shape=conical" is used to make the split. The gain is 1.407313. The node cover is 1183.25. The left child node cover is 1182.75. The right child node cover is 0.5. The left leaf score is -0.3417107. The right leaf score is 0.6666667. The left leaf success probability is 0.415394. The right leaf success probability is 0.6607564.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=conical" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since the right child node cover is smaller than 1, the split is not allowed.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==0)
+R = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==1)
 
-```
-## "cap-shape=convex" is used to make the split. The gain is 9.776436. The node cover is 1183.25. The left child node cover is 549.75. The right child node cover is 633.5. The left leaf score is -0.438493. The right leaf score is -0.2553191. The left leaf success probability is 0.3921001. The right leaf success probability is 0.4365147.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=convex" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 We will use this only allowed split.
 
 Let's see the report for all possible split for "cap-shape=bell" = 0 and "cap-shape=convex" = 0.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==0 & train_X[,'cap-shape=conical']==0)
+R = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==0 & train_X[,'cap-shape=conical']==1)
 
-```
-## "cap-shape=conical" is used to make the split. The gain is 1.642492. The node cover is 549.75. The left child node cover is 549.25. The right child node cover is 0.5. The left leaf score is -0.4407088. The right leaf score is 0.6666667. The left leaf success probability is 0.3915721. The right leaf success probability is 0.6607564.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=conical" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since the right child node cover is smaller than 1, the split is not allowed.
@@ -245,8 +469,7 @@ Therefore, for the first tree we will use the right child node of the initial sp
 
 Before we construct the second tree. We will update the estimated success probability using the first tree.
 
-
-```r
+```{r}
 p[which(train_X[,'cap-shape=bell']==1)] = 0.1939799
 p[which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==0)] = 0.3921001
 p[which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==1)] = 0.4365147
@@ -254,46 +477,286 @@ p[which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==1)] = 0.43
 
 Let's see the report of all the possible splits of the second tree.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=bell']==0)
+R = which(train_X[,'cap-shape=bell']==1)
 
-```
-## "cap-shape=bell" is used to make the split. The gain is 4.803007. The node cover is 1189.181. The left child node cover is 1147.435. The right child node cover is 41.7459. The left leaf score is -0.004664058. The right leaf score is -0.3460597. The left leaf success probability is 0.498834. The right leaf success probability is 0.4143383.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=bell" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=conical']==0)
+R = which(train_X[,'cap-shape=conical']==1)
 
-```
-## "cap-shape=conical" is used to make the split. The gain is 1.043546. The node cover is 1189.181. The left child node cover is 1188.705. The right child node cover is 0.4767152. The left leaf score is -0.01795807. The right leaf score is 0.8233136. The left leaf success probability is 0.4955106. The right leaf success probability is 0.6949393.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=conical" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since the right child node cover is smaller than 1, the split is not allowed.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=convex']==0)
+R = which(train_X[,'cap-shape=convex']==1)
 
-```
-## "cap-shape=convex" is used to make the split. The gain is 0.2991243. The node cover is 1189.181. The left child node cover is 565.8943. The right child node cover is 623.287. The left leaf score is -0.03355256. The right leaf score is -0.001807261. The left leaf success probability is 0.4916126. The right leaf success probability is 0.4995482.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=convex" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since "cap-shape=bell" gives the largest gain among all the allowed splits. We will use it to make the initial split of our second tree.
 
 Let's see the report for all possible splits for "cap-shape=bell" = 0.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=conical']==0)
+R = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=conical']==1)
 
-```
-## "cap-shape=conical" is used to make the split. The gain is 1.013628. The node cover is 1147.435. The left child node cover is 1146.959. The right child node cover is 0.4767152. The left leaf score is -0.005725092. The right leaf score is 0.8233136. The left leaf success probability is 0.4985687. The right leaf success probability is 0.6949393.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=conical" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since the right child node cover is smaller than 1, the split is not allowed.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==0)
+R = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==1)
 
-```
-## "cap-shape=convex" is used to make the split. The gain is 0.01109842. The node cover is 1147.435. The left child node cover is 524.1484. The right child node cover is 623.287. The left leaf score is -0.008051286. The right leaf score is -0.001807261. The left leaf success probability is 0.4979872. The right leaf success probability is 0.4995482.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=convex" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 We will use this only allowed split.
 
 Let's see the report for all possible split for "cap-shape=bell" = 0 and "cap-shape=convex" = 0.
 
+```{r echo = FALSE}
+L = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==0 & train_X[,'cap-shape=conical']==0)
+R = which(train_X[,'cap-shape=bell']==0 & train_X[,'cap-shape=convex']==0 & train_X[,'cap-shape=conical']==1)
 
-```
-## "cap-shape=conical" is used to make the split. The gain is 1.023428. The node cover is 524.1484. The left child node cover is 523.6717. The right child node cover is 0.4767152. The left leaf score is -0.01037586. The right leaf score is 0.8233136. The left leaf success probability is 0.4974061. The right leaf success probability is 0.6949393.
+pL = p[L]
+pR = p[R]
+
+yL = train_y[L]
+yR = train_y[R]
+
+GL = sum(pL-yL)
+GR = sum(pR-yR)
+G = GL+GR
+
+HL = sum(pL*(1-pL))
+HR = sum(pR*(1-pR))
+H = HL+HR
+
+gain = (GL^2/(HL+1)+GR^2/(HR+1)-G^2/(H+1))
+
+WL = -GL/(HL+1)
+WR = -GR/(HR+1)
+pL_new = 1/(1+exp(-WL))
+pR_new = 1/(1+exp(-WR))
+
+cat('"cap-shape=conical" is used to make the split. The gain is ',
+    gain,
+    ". The node cover is ",
+    H,
+    ". The left child node cover is ",
+    HL,
+    ". The right child node cover is ",
+    HR,
+    ". The left leaf score is ",
+    WL,
+    ". The right leaf score is ",
+    WR,
+    ". The left leaf success probability is ",
+    pL_new,
+    ". The right leaf success probability is ",
+    pR_new,
+    ".",
+    sep = "")
 ```
 
 Since the right child node cover is smaller than 1, the split is not allowed.
